--- a/index.html
+++ b/index.html
@@ -7,28 +7,40 @@
   <title>The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!</title>
   <meta name="description" content="The Dog House — подробный гламурный обзор слота: механики, RTP, советы и эксклюзивный промокод DOG2026. Приветственный бонус до 50 000 ₽ + 300 фриспинов." />
   <meta name="keywords" content="The Dog House, слот, играть онлайн, промокод DOG2026, бонус 50000, 300 фриспинов, Pragmatic Play, обзор" />
-  <link rel="canonical" href="https://yourdomain.example/the-dog-house" />
+  <link rel="canonical" href="https://doghouse.cards/the-dog-house" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!" />
   <meta property="og:description" content="Гламурный обзор слота The Dog House: фичи, стратегия, технические параметры и промокод DOG2026 для бонуса." />
   <meta property="og:image" content="https://i.yapx.ru/a7BuA.png" />
-  <meta property="og:url" content="https://yourdomain.example/the-dog-house" />
+  <meta property="og:url" content="https://doghouse.cards/the-dog-house" />
 
   <link rel="icon" href="https://i.yapx.ru/a7BuA.png" type="image/png" />
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <!-- Structured data: WebPage + FAQ + Reviews + AggregateRating -->
+  <!-- Structured data: WebPage + BreadcrumbList + FAQ + Reviews + AggregateRating -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"WebPage",
     "name":"The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!",
-    "url":"https://yourdomain.example/the-dog-house",
+    "url":"https://doghouse.cards/the-dog-house",
     "headline":"The Dog House — подробный гламурный обзор слота",
     "description":"Подробный обзор игрового автомата The Dog House, советы по игре и эксклюзивный промокод DOG2026."
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Главная","item":"https://doghouse.cards"},
+      {"@type":"ListItem","position":2,"name":"Слоты","item":"https://doghouse.cards/slots"},
+      {"@type":"ListItem","position":3,"name":"The Dog House","item":"https://doghouse.cards/the-dog-house"}
+    ]
   }
   </script>
 
@@ -38,7 +50,9 @@
     "@type":"FAQPage",
     "mainEntity":[
       {"@type":"Question","name":"Как использовать промокод DOG2026?","acceptedAnswer":{"@type":"Answer","text":"Скопируйте промокод DOG2026 на этой странице и вставьте его в поле «Промокод» при регистрации на сайте казино."}},
-      {"@type":"Question","name":"Где можно играть в The Dog House?","acceptedAnswer":{"@type":"Answer","text":"The Dog House доступен на большинстве онлайн-казино в браузерной и мобильной версиях. Рекомендуется регистрироваться через проверенные платформы."}}
+      {"@type":"Question","name":"Где можно играть в The Dog House?","acceptedAnswer":{"@type":"Answer","text":"The Dog House доступен на большинстве онлайн-казино в браузерной и мобильной версиях. Рекомендуется регистрироваться через проверенные платформы."}},
+      {"@type":"Question","name":"Можно ли играть бесплатно в демо-режиме?","acceptedAnswer":{"@type":"Answer","text":"Да — многие казино предлагают демо-режим, где можно опробовать слот без ставок реальными деньгами."}},
+      {"@type":"Question","name":"Как вывести выигрыш?","acceptedAnswer":{"@type":"Answer","text":"Вывод зависит от правил оператора казино. Обычно доступен банковский перевод, карты и электронные кошельки. Читайте условия оператора перед выводом."}}
     ]
   }
   </script>
@@ -105,6 +119,7 @@
       --card-bg: rgba(6,10,20,0.55);
       --card-border: rgba(255,255,255,0.04);
       --max-width:1100px;
+      --bonus-bg: rgba(255,209,102,0.06);
     }
 
     *{box-sizing:border-box}
@@ -149,14 +164,38 @@
     }
     .title p{margin:6px 0 0;font-size:13px;color:var(--muted)}
 
+    /* replaced "online" with bonus block styling (same position) */
     .online {
       margin-left:auto;
       text-align:right;
-      min-width:190px;
+      min-width:220px;
       color:var(--muted);
+      display:flex;
+      flex-direction:column;
+      align-items:flex-end;
+      gap:6px;
     }
     .online .label{font-size:12px;color:var(--muted)}
-    .online .value{font-size:20px;font-weight:800;color:var(--accent);letter-spacing:1px;text-shadow:0 6px 18px rgba(255,200,120,0.06)}
+    .bonuses {
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+      padding:8px 12px;
+      border-radius:10px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.00));
+      border:1px solid rgba(255,255,255,0.02);
+      box-shadow: 0 8px 22px rgba(0,0,0,0.45);
+      backdrop-filter: blur(6px);
+    }
+    .bonuses .icon {
+      width:36px;height:36px;border-radius:8px;display:flex;align-items:center;justify-content:center;
+      background: linear-gradient(90deg, rgba(255,209,102,0.12), rgba(255,123,123,0.06));
+      color:#08101a;font-weight:800;
+      box-shadow: 0 6px 18px rgba(255,200,120,0.04) inset;
+    }
+    .bonuses .text {text-align:right}
+    .bonuses .text .num {font-weight:800;color:var(--accent);font-size:18px}
+    .bonuses .text .sub {font-size:12px;color:var(--muted)}
 
     .hero{display:grid;grid-template-columns:1fr 360px;gap:26px;margin-top:18px;align-items:start}
 
@@ -262,9 +301,16 @@
         </div>
       </div>
 
-      <div class="online" aria-live="polite" title="Текущее количество игроков онлайн">
-        <div class="label">Онлайн на сайте</div>
-        <div class="value" id="onlineCount">1&nbsp;032</div>
+      <!-- ЗДЕСЬ: заменили онлайн-счётчик на блок "Активные бонусы сегодня" -->
+      <div class="online" aria-live="polite" title="Активные бонусы сегодня">
+        <div class="label">Активные бонусы</div>
+        <div class="bonuses" role="status" aria-atomic="true" aria-label="Активные бонусы сегодня">
+          <div class="icon" aria-hidden="true">🎁</div>
+          <div class="text">
+            <div class="num" id="bonusCount">37</div>
+            <div class="sub">обновляется каждые несколько секунд</div>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -342,6 +388,7 @@
               <details><summary>Как ввести промокод?</summary><p>Скопируйте DOG2026 и вставьте в поле «Промокод» при регистрации на сайте казино или используйте кнопку «Скопировать» справа.</p></details>
               <details><summary>Нужно ли скачивать игру?</summary><p>Нет — The Dog House работает в браузере и в мобильных приложениях без скачивания отдельного клиента.</p></details>
               <details><summary>Можно ли играть бесплатно?</summary><p>Да — многие казино предлагают демо-режим, где можно опробовать слот без ставок реальными деньгами.</p></details>
+              <details><summary>Как вывести выигрыш?</summary><p>Вывод зависит от оператора казино — обычно банковские карты, электронные кошельки или переводы. Читайте правила и лимиты платежей на площадке.</p></details>
             </section>
           </div>
         </article>
@@ -444,17 +491,19 @@
       // Promo copy
       const promo = 'DOG2026';
       const copyBtn = document.getElementById('copyBtn');
-      copyBtn.addEventListener('click', function(){
-        if(navigator.clipboard && window.isSecureContext){
-          navigator.clipboard.writeText(promo).then(()=> showToast('Промокод скопирован: ' + promo));
-        } else {
-          const ta = document.createElement('textarea');
-          ta.value = promo; ta.style.position='fixed'; ta.style.left='-9999px';
-          document.body.appendChild(ta); ta.select();
-          try{ document.execCommand('copy'); showToast('Промокод скопирован: ' + promo); } catch(e){ showToast('Скопируйте вручную: ' + promo); }
-          ta.remove();
-        }
-      });
+      if(copyBtn){
+        copyBtn.addEventListener('click', function(){
+          if(navigator.clipboard && window.isSecureContext){
+            navigator.clipboard.writeText(promo).then(()=> showToast('Промокод скопирован: ' + promo));
+          } else {
+            const ta = document.createElement('textarea');
+            ta.value = promo; ta.style.position='fixed'; ta.style.left='-9999px';
+            document.body.appendChild(ta); ta.select();
+            try{ document.execCommand('copy'); showToast('Промокод скопирован: ' + promo); } catch(e){ showToast('Скопируйте вручную: ' + promo); }
+            ta.remove();
+          }
+        });
+      }
 
       function showToast(msg){
         const t = document.createElement('div');
@@ -466,19 +515,25 @@
         setTimeout(()=>{ t.style.transition='opacity .35s'; t.style.opacity='0'; setTimeout(()=>t.remove(),350)},1700);
       }
 
-      // Online counter: oscillates between 813 and 2511 (~11 changes per minute)
-      const el = document.getElementById('onlineCount');
-      const min = 813, max = 2511;
-      let val = Math.floor((min + max) / 2);
-      let dir = 1;
-      el.textContent = val.toLocaleString('ru-RU');
-      const intervalMs = 60000 / 11; // ~5454.545 ms
+      // --- Active bonuses counter (replaces online counter) ---
+      const bonusEl = document.getElementById('bonusCount');
+      // start in the middle of the range
+      let minB = 25, maxB = 50;
+      let bonusVal = Math.floor((minB + maxB) / 2);
+      let bonusDir = 1;
+      if(bonusEl) bonusEl.textContent = bonusVal;
+
+      // ~11 changes per minute => interval ~5454 ms
+      const bonusesIntervalMs = 60000 / 11;
+
       setInterval(() => {
-        val += dir * 1;
-        if(val >= max){ val = max; dir = -1; }
-        else if(val <= min){ val = min; dir = 1; }
-        el.textContent = val.toLocaleString('ru-RU');
-      }, intervalMs);
+        // change by 1 in direction; occasionally randomize direction to feel natural
+        if(Math.random() < 0.12) bonusDir *= -1;
+        bonusVal += bonusDir * 1;
+        if(bonusVal >= maxB){ bonusVal = maxB; bonusDir = -1; }
+        if(bonusVal <= minB){ bonusVal = minB; bonusDir = 1; }
+        if(bonusEl) bonusEl.textContent = bonusVal;
+      }, bonusesIntervalMs);
 
       // CTA logging
       const playBtn = document.getElementById('playBtn');
