--- a/index.html
+++ b/index.html
@@ -2,33 +2,39 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <title>The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!</title>
   <meta name="description" content="The Dog House — подробный гламурный обзор слота: механики, RTP, советы и эксклюзивный промокод DOG2026. Приветственный бонус до 50 000 ₽ + 300 фриспинов." />
   <meta name="keywords" content="The Dog House, слот, играть онлайн, промокод DOG2026, бонус 50000, 300 фриспинов, Pragmatic Play, обзор" />
-  <link rel="canonical" href="https://doghouse.cards/the-dog-house" />
+  <link rel="canonical" href="https://doghouse.cards" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph / Twitter (используем корневой домен по просьбе) -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!" />
   <meta property="og:description" content="Гламурный обзор слота The Dog House: фичи, стратегия, технические параметры и промокод DOG2026 для бонуса." />
   <meta property="og:image" content="https://i.yapx.ru/a7BuA.png" />
-  <meta property="og:url" content="https://doghouse.cards/the-dog-house" />
+  <meta property="og:url" content="https://doghouse.cards" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!" />
+  <meta name="twitter:description" content="Гламурный обзор слота The Dog House и промокод DOG2026." />
+  <meta name="twitter:image" content="https://i.yapx.ru/a7BuA.png" />
+  <meta name="theme-color" content="#0b0b12" />
 
   <link rel="icon" href="https://i.yapx.ru/a7BuA.png" type="image/png" />
-
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <!-- Structured data: WebPage + BreadcrumbList + FAQ + Reviews + AggregateRating -->
+  <!-- Structured data (WebPage + BreadcrumbList + FAQ + Product + Reviews/Rating) -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"WebPage",
     "name":"The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!",
-    "url":"https://doghouse.cards/the-dog-house",
+    "url":"https://doghouse.cards",
     "headline":"The Dog House — подробный гламурный обзор слота",
-    "description":"Подробный обзор игрового автомата The Dog House, советы по игре и эксклюзивный промокод DOG2026."
+    "description":"Подробный обзор игрового автомата The Dog House, советы по игре и эксклюзивный промокод DOG2026.",
+    "inLanguage":"ru-RU"
   }
   </script>
 
@@ -62,55 +68,23 @@
     "@context":"https://schema.org",
     "@type":"Product",
     "name":"The Dog House (слот)",
-    "aggregateRating":{
-      "@type":"AggregateRating",
-      "ratingValue":"4.6",
-      "bestRating":"5",
-      "ratingCount":"5"
-    },
+    "image":"https://i.yapx.ru/a7BuA.png",
+    "description":"Популярный слот от Pragmatic Play с фриспинами, sticky wilds и высоким потенциалом выплат.",
+    "brand": {"@type":"Brand","name":"Pragmatic Play"},
+    "aggregateRating":{"@type":"AggregateRating","ratingValue":"4.6","bestRating":"5","ratingCount":"5"},
     "review":[
-      {
-        "@type":"Review",
-        "author":"Алексей",
-        "datePublished":"2025-09-12",
-        "reviewBody":"Поймал Sticky Wild в фриспинах — занес 180x, супер эмоции! Игра отличная для вечерних сессий.",
-        "reviewRating":{"@type":"Rating","ratingValue":"5","bestRating":"5"}
-      },
-      {
-        "@type":"Review",
-        "author":"Марина",
-        "datePublished":"2025-08-03",
-        "reviewBody":"Люблю графику и частоту фриспинов. Промокод DOG2026 дал хороший старт — рекомендую.",
-        "reviewRating":{"@type":"Rating","ratingValue":"5","bestRating":"5"}
-      },
-      {
-        "@type":"Review",
-        "author":"Игорь",
-        "datePublished":"2025-07-21",
-        "reviewBody":"Высокая волатильность, но когда повезёт — крупно. Для рискованных сессий подойдёт.",
-        "reviewRating":{"@type":"Rating","ratingValue":"4","bestRating":"5"}
-      },
-      {
-        "@type":"Review",
-        "author":"Светлана",
-        "datePublished":"2025-06-10",
-        "reviewBody":"300 фриспинов помогли изучить слот без лишних рисков — отличный слот от Pragmatic Play.",
-        "reviewRating":{"@type":"Rating","ratingValue":"5","bestRating":"5"}
-      },
-      {
-        "@type":"Review",
-        "author":"Роман",
-        "datePublished":"2025-05-02",
-        "reviewBody":"Очень атмосферно. В демо сначала не заметил, потом при ставках крупные множители начали выпадать чаще.",
-        "reviewRating":{"@type":"Rating","ratingValue":"4","bestRating":"5"}
-      }
+      {"@type":"Review","author":"Алексей","datePublished":"2025-09-12","reviewBody":"Поймал Sticky Wild в фриспинах — занес 180x, супер эмоции! Игра отличная для вечерних сессий.","reviewRating":{"@type":"Rating","ratingValue":"5","bestRating":"5"}},
+      {"@type":"Review","author":"Марина","datePublished":"2025-08-03","reviewBody":"Люблю графику и частоту фриспинов. Промокод DOG2026 дал хороший старт — рекомендую.","reviewRating":{"@type":"Rating","ratingValue":"5","bestRating":"5"}},
+      {"@type":"Review","author":"Игорь","datePublished":"2025-07-21","reviewBody":"Высокая волатильность, но когда повезёт — крупно. Для рискованных сессий подойдёт.","reviewRating":{"@type":"Rating","ratingValue":"4","bestRating":"5"}},
+      {"@type":"Review","author":"Светлана","datePublished":"2025-06-10","reviewBody":"300 фриспинов помогли изучить слот без лишних рисков — отличный слот от Pragmatic Play.","reviewRating":{"@type":"Rating","ratingValue":"5","bestRating":"5"}},
+      {"@type":"Review","author":"Роман","datePublished":"2025-05-02","reviewBody":"Очень атмосферно. В демо сначала не заметил, потом при ставках крупные множители начали выпадать чаще.","reviewRating":{"@type":"Rating","ratingValue":"4","bestRating":"5"}}
     ]
   }
   </script>
 
   <style>
     :root{
-      --bg: #0b0b12; /* ровный глубокий графитовый фон */
+      --bg: #0b0b12;
       --muted:#9fb0c8;
       --text-light:#eaf4ff;
       --accent:#ffd166;
@@ -125,12 +99,13 @@
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial;}
     body{
-      background: var(--bg); /* однотонный фон */
+      background: var(--bg);
       color:var(--text-light);
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
       padding-bottom:70px;
       line-height:1.6;
+      scroll-behavior:smooth;
     }
 
     .wrap{max-width:var(--max-width);margin:36px auto;padding:20px}
@@ -140,9 +115,10 @@
       border:1px solid rgba(255,255,255,0.02);
       box-shadow: 0 10px 40px rgba(0,0,0,0.6), inset 0 1px 0 rgba(255,255,255,0.02);
       backdrop-filter: blur(6px);
+      flex-wrap:wrap;
     }
 
-    .brand{display:flex;align-items:center;gap:12px}
+    .brand{display:flex;align-items:center;gap:12px;min-width:240px}
     .logo{
       width:78px;height:78px;border-radius:14px;overflow:hidden;flex:0 0 78px;
       display:flex;align-items:center;justify-content:center;
@@ -164,7 +140,6 @@
     }
     .title p{margin:6px 0 0;font-size:13px;color:var(--muted)}
 
-    /* replaced "online" with bonus block styling (same position) */
     .online {
       margin-left:auto;
       text-align:right;
@@ -199,9 +174,8 @@
 
     .hero{display:grid;grid-template-columns:1fr 360px;gap:26px;margin-top:18px;align-items:start}
 
-    /* dark cards: transparent, blurred background */
     .card{
-      background-color: rgba(6,10,20,0.55); /* semi-transparent dark card */
+      background-color: rgba(6,10,20,0.55);
       border-radius:14px;padding:22px;border:1px solid var(--card-border);
       box-shadow: 0 14px 40px rgba(0,0,0,0.6);
       color:var(--text-light);
@@ -246,7 +220,6 @@
     .promo{font-size:20px;font-weight:800;color:var(--accent);margin-bottom:6px;text-shadow:0 8px 24px rgba(255,209,102,0.04)}
     .promo-sub{color:var(--muted);font-size:13px;margin-bottom:12px}
 
-    /* neon-like button */
     .bigbtn{
       display:inline-flex;align-items:center;justify-content:center;gap:10px;padding:14px 20px;border-radius:999px;
       background:linear-gradient(90deg,#ffcf66,#ff9b9b);
@@ -273,7 +246,6 @@
 
     .aside-buttons{display:flex;flex-direction:column;gap:12px;margin-top:8px}
 
-    /* Reviews */
     .reviews{margin-top:20px;display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
     .review-card{background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:12px;border:1px solid rgba(255,255,255,0.02);box-shadow:0 8px 30px rgba(0,0,0,0.45);color:var(--text-light)}
     .review-meta{display:flex;align-items:center;gap:10px;justify-content:space-between}
@@ -283,7 +255,6 @@
     @media (max-width:990px){ .hero{grid-template-columns:1fr;} .cta{position:static;} .reviews{grid-template-columns:1fr} .thumb{width:96px;height:96px} }
     @media (max-width:520px){ .logo{width:64px;height:64px} .lead-text h2{font-size:20px} .title h1{font-size:16px} .card{padding:16px} .wrap{padding:12px} }
 
-    /* reveal animation */
     .reveal{opacity:0;transform:translateY(10px);transition:opacity .6s ease, transform .6s ease}
     .reveal.visible{opacity:1;transform:none}
   </style>
@@ -301,7 +272,6 @@
         </div>
       </div>
 
-      <!-- ЗДЕСЬ: заменили онлайн-счётчик на блок "Активные бонусы сегодня" -->
       <div class="online" aria-live="polite" title="Активные бонусы сегодня">
         <div class="label">Активные бонусы</div>
         <div class="bonuses" role="status" aria-atomic="true" aria-label="Активные бонусы сегодня">
@@ -333,7 +303,7 @@
             </div>
           </div>
 
-          <div class="features reveal">
+          <div class="features reveal" role="list" aria-label="Ключевые характеристики">
             <div class="feature" role="listitem">
               <div><h4>Формат</h4><p>5 барабанов, 20 линий выплат</p></div>
             </div>
@@ -449,13 +419,13 @@
           <div class="promo" id="panel-title">Промокод</div>
           <div class="promo-sub">Получите бонус при регистрации</div>
 
-          <a id="playBtn" class="bigbtn" href="https://1woxno.life/casino/list?open=register&sub1=Dog" rel="noopener noreferrer" target="_blank" aria-label="Играть — перейти к регистрации">
+          <a id="playBtn" class="bigbtn" href="https://doghouse.cards" rel="noopener noreferrer" target="_blank" aria-label="Играть — перейти к регистрации">
             Играть сейчас · Получить бонус
             <svg width="18" height="18" viewBox="0 0 24 24" style="margin-left:6px" aria-hidden="true"><path fill="#111" d="M12 2L3 7v6c0 5 3.7 9.7 9 11 5.3-1.3 9-6 9-11V7l-9-5z"/></svg>
           </a>
 
           <div class="aside-buttons">
-            <a id="regBtn" class="ghost" href="https://1woxno.life/casino/list?open=register&sub1=Dog" target="_blank" rel="noopener noreferrer">Зарегистрироваться</a>
+            <a id="regBtn" class="ghost" href="https://doghouse.cards" target="_blank" rel="noopener noreferrer">Зарегистрироваться</a>
 
             <div style="background:transparent;padding:12px;border-radius:10px;">
               <div style="text-align:center;font-weight:800;color:var(--accent-deep);margin-bottom:8px">Код для бонуса</div>
