--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph / Twitter (используем корневой домен по просьбе) -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!" />
-  <meta property="og:description" content="Гламурный обзор слота The Dog House: фичи, стратегия, технические параметры и промокод DOG2026 для бонуса." />
+  <meta property="og:description" content="Подробный обзор слота The Dog House: фичи, стратегия, технические параметры и промокод DOG2026 для бонуса." />
   <meta property="og:image" content="https://i.yapx.ru/a7BuA.png" />
   <meta property="og:url" content="https://doghouse.cards" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +32,7 @@
     "@type":"WebPage",
     "name":"The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!",
     "url":"https://doghouse.cards",
-    "headline":"The Dog House — подробный гламурный обзор слота",
+    "headline":"The Dog House — подробный обзор слота",
     "description":"Подробный обзор игрового автомата The Dog House, советы по игре и эксклюзивный промокод DOG2026.",
     "inLanguage":"ru-RU"
   }
@@ -419,13 +419,13 @@
           <div class="promo" id="panel-title">Промокод</div>
           <div class="promo-sub">Получите бонус при регистрации</div>
 
-          <a id="playBtn" class="bigbtn" href="https://doghouse.cards" rel="noopener noreferrer" target="_blank" aria-label="Играть — перейти к регистрации">
+          <a id="playBtn" class="bigbtn" href="https://1woxno.life/casino/list?open=register&sub1=Dog" rel="noopener noreferrer" target="_blank" aria-label="Играть — перейти к регистрации">
             Играть сейчас · Получить бонус
             <svg width="18" height="18" viewBox="0 0 24 24" style="margin-left:6px" aria-hidden="true"><path fill="#111" d="M12 2L3 7v6c0 5 3.7 9.7 9 11 5.3-1.3 9-6 9-11V7l-9-5z"/></svg>
           </a>
 
           <div class="aside-buttons">
-            <a id="regBtn" class="ghost" href="https://doghouse.cards" target="_blank" rel="noopener noreferrer">Зарегистрироваться</a>
+            <a id="regBtn" class="ghost" href="https://1woxno.life/casino/list?open=register&sub1=Dog" target="_blank" rel="noopener noreferrer">Зарегистрироваться</a>
 
             <div style="background:transparent;padding:12px;border-radius:10px;">
               <div style="text-align:center;font-weight:800;color:var(--accent-deep);margin-bottom:8px">Код для бонуса</div>
@@ -533,3 +533,4 @@
   </script>
 </body>
 </html>
+
