--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <title>The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!</title>
-  <meta name="description" content="The Dog House — подробный гламурный обзор слота: механики, RTP, советы и эксклюзивный промокод DOG2026. Приветственный бонус до 50 000 ₽ + 300 фриспинов." />
+  <meta name="description" content="The Dog House — подробный подробный обзор слота: механики, RTP, советы и эксклюзивный промокод DOG2026. Приветственный бонус до 50 000 ₽ + 300 фриспинов." />
   <meta name="keywords" content="The Dog House, слот, играть онлайн, промокод DOG2026, бонус 50000, 300 фриспинов, Pragmatic Play, обзор" />
   <link rel="canonical" href="https://doghouse.cards" />
 
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://doghouse.cards" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!" />
-  <meta name="twitter:description" content="Гламурный обзор слота The Dog House и промокод DOG2026." />
+  <meta name="twitter:description" content="подробный обзор слота The Dog House и промокод DOG2026." />
   <meta name="twitter:image" content="https://i.yapx.ru/a7BuA.png" />
   <meta name="theme-color" content="#0b0b12" />
 
@@ -253,7 +253,7 @@
     .review-body{margin-top:8px;color:#d4e9ff;font-size:14px}
 
     @media (max-width:990px){ .hero{grid-template-columns:1fr;} .cta{position:static;} .reviews{grid-template-columns:1fr} .thumb{width:96px;height:96px} }
-    @media (max-width:520px){ .logo{width:64px;height:64px} .lead-text h2{font-size:20px} .title h1{font-size:16px} .card{padding:16px} .wrap{padding:12px} }
+    @media (max-width:520px){ .logo{width:64px;height:64px .bigbtn{margin-bottom:10px;}} .lead-text h2{font-size:20px} .title h1{font-size:16px} .card{padding:16px} .wrap{padding:12px} }
 
     .reveal{opacity:0;transform:translateY(10px);transition:opacity .6s ease, transform .6s ease}
     .reveal.visible{opacity:1;transform:none}
@@ -268,7 +268,7 @@
         </div>
         <div class="title">
           <h1 itemprop="name">The Dog House — Приветственный бонус до 50 000 ₽ + 300 фриспинов!</h1>
-          <p itemprop="description">Гламурный обзор слота, подробная инструкция и эксклюзивный промокод <strong>DOG2026</strong></p>
+          <p itemprop="description">подробный обзор слота, подробная инструкция и эксклюзивный промокод <strong>DOG2026</strong></p>
         </div>
       </div>
 
@@ -314,7 +314,7 @@
               <div><h4>Совместимость</h4><p>HTML5 — мобильный и десктоп</p></div>
             </div>
             <div class="feature" role="listitem">
-              <div><h4>Дизайн</h4><p>Яркая мультяшная графика с гламурными акцентами</p></div>
+              <div><h4>Дизайн</h4><p>Яркая мультяшная графика с подробными акцентами</p></div>
             </div>
           </div>
 
