--- a/index.html
+++ b/index.html
@@ -252,7 +252,17 @@
     .stars{color:#f5b642;font-weight:800}
     .review-body{margin-top:8px;color:#d4e9ff;font-size:14px}
 
-    @media (max-width:990px){ .hero{grid-template-columns:1fr;} .cta{position:static;} .reviews{grid-template-columns:1fr} .thumb{width:96px;height:96px} }
+    
+@media (max-width:990px){
+  .hero{display:flex;flex-direction:column-reverse;gap:24px;}
+  .cta{position:static;margin-top:0;order:-1;width:100%;}
+  .cta .panel{max-width:500px;margin:0 auto;}
+  .bigbtn, .ghost{width:100%;max-width:420px;margin:0 auto;}
+  .cta .aside-buttons{align-items:center;}
+  .reviews{grid-template-columns:1fr}
+  .thumb{width:96px;height:96px}
+}
+ .cta{position:static;} .reviews{grid-template-columns:1fr} .thumb{width:96px;height:96px} }
     @media (max-width:520px){ .logo{width:64px;height:64px .bigbtn{margin-bottom:10px;}} .lead-text h2{font-size:20px} .title h1{font-size:16px} .card{padding:16px} .wrap{padding:12px} }
 
     .reveal{opacity:0;transform:translateY(10px);transition:opacity .6s ease, transform .6s ease}
