--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 <div class="promo" id="panel-title">Промокод</div>
 <div class="promo-sub">Получите бонус при регистрации</div>
 <a aria-label="Играть — перейти к регистрации" class="bigbtn" href="https://1woxno.life/casino/list?open=register&amp;sub1=Dog" id="playBtn" rel="noopener noreferrer" target="_blank">
-            Играть сейчас · Получить бонус
+            ИГРАТЬ СЕЙЧАС
             <svg aria-hidden="true" height="18" style="margin-left:6px" viewbox="0 0 24 24" width="18"><path d="M12 2L3 7v6c0 5 3.7 9.7 9 11 5.3-1.3 9-6 9-11V7l-9-5z" fill="#111"></path></svg>
 </a>
 <div class="aside-buttons">
@@ -502,4 +502,5 @@
   </script>
 </body>
 </html>
+
 
