--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
         /* Mobile-specific styles */
         @media (max-width: 520px) {
             body {
-                font-size: 14px;
-                line-height: 1.4;
+                font-size: 16px;
+                line-height: 1.5;
             }
 
             .logo {
-                width: 60px;
-                height: 60px;
+                width: 64px;
+                height: 64px;
             }
 
             .title h1 {
@@ -95,39 +95,45 @@
             }
 
             .lead-text h2 {
-                font-size: 20px;
-                line-height: 1.3;
+                font-size: 22px;
+                line-height: 1.4;
             }
 
             .card {
-                padding: 12px;
+                padding: 16px;
+                width: 100%;
             }
 
             .hero {
                 display: flex;
                 flex-direction: column;
-                gap: 18px;
+                gap: 20px;
+                align-items: flex-start;
             }
 
             .thumb {
-                width: 80px;
-                height: 80px;
+                width: 100px;
+                height: 100px;
                 margin-bottom: 10px;
             }
 
             .cta {
-                padding: 12px;
+                padding: 16px;
+                width: 100%;
             }
 
             .bigbtn {
                 width: 100%;
-                padding: 12px;
-                font-size: 16px;
+                padding: 16px;
+                font-size: 18px;
+                text-align: center;
+                border-radius: 50px;
             }
 
             .panel {
-                padding: 12px;
+                padding: 16px;
                 text-align: center;
+                width: 100%;
             }
 
             .badges {
@@ -141,36 +147,46 @@
             }
 
             .review-card {
-                padding: 10px;
+                padding: 14px;
                 font-size: 14px;
             }
 
             .faq details {
-                margin-top: 12px;
-                padding: 10px;
+                margin-top: 16px;
+                padding: 12px;
             }
 
             .faq summary {
                 font-weight: bold;
+                font-size: 16px;
             }
 
             .promo-code {
                 flex-direction: column;
-                gap: 10px;
+                gap: 12px;
+                width: 100%;
             }
 
             footer {
-                font-size: 12px;
-                padding: 12px;
+                font-size: 14px;
+                padding: 16px;
+                text-align: center;
             }
 
             .wrap {
-                padding: 10px;
+                padding: 12px;
                 margin: 0;
+                width: 100%;
+            }
+
+            .ghost {
+                padding: 14px;
+                width: 100%;
+                font-size: 16px;
             }
         }
 
-        /* Medium screens */
+        /* Medium screens for tablets or larger devices */
         @media (max-width: 990px) {
             .hero {
                 display: flex;
@@ -189,8 +205,8 @@
             }
 
             .thumb {
-                width: 100px;
-                height: 100px;
+                width: 120px;
+                height: 120px;
             }
         }
     
@@ -620,4 +636,5 @@
   </script>
 </body>
 </html>
+
 
