--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 <meta content="подробный обзор слота The Dog House и промокод DOG2026." name="twitter:description"/>
 <meta content="https://i.yapx.ru/a7BuA.png" name="twitter:image"/>
 <meta content="#0b0b12" name="theme-color"/>
-<link href="https://i.yapx.ru/a7BuA.png" rel="icon" type="image/png"/>
+<!-- ✅ Исправленные favicon-теги -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+<link rel="shortcut icon" href="/favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="/favicon.png">
+<meta name="theme-color" content="#0b0b12">
+
+<!-- 🔍 Подключение аналитики Vercel -->
+<script defer src="https://vercel.com/analytics/script.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet"/>
 <!-- Structured data (WebPage + BreadcrumbList + FAQ + Product + Reviews/Rating) -->
 <script type="application/ld+json">
@@ -636,5 +643,4 @@
   </script>
 </body>
 </html>
-
 
