--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
 <meta content="подробный обзор слота The Dog House и промокод DOG2026." name="twitter:description"/>
 <meta content="https://i.yapx.ru/a7BuA.png" name="twitter:image"/>
 <meta content="#0b0b12" name="theme-color"/>
-<!-- ✅ Исправленные favicon-теги -->
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-<link rel="shortcut icon" href="/favicon.png" type="image/png">
-<link rel="apple-touch-icon" href="/favicon.png">
-<meta name="theme-color" content="#0b0b12">
+<link href="/DOG3.png" rel="icon" type="image/png"/>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet"/>
 
 <!-- 🔍 Подключение аналитики Vercel -->
 <script defer src="https://vercel.com/analytics/script.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet"/>
 <!-- Structured data (WebPage + BreadcrumbList + FAQ + Product + Reviews/Rating) -->
 <script type="application/ld+json">
   {
@@ -69,7 +65,7 @@
     "@context":"https://schema.org",
     "@type":"Product",
     "name":"The Dog House (слот)",
-    "image":"https://i.yapx.ru/a7BuA.png",
+    "image":"/DOG3.png",
     "description":"Популярный слот от Pragmatic Play с фриспинами, sticky wilds и высоким потенциалом выплат.",
     "brand": {"@type":"Brand","name":"Pragmatic Play"},
     "aggregateRating":{"@type":"AggregateRating","ratingValue":"4.6","bestRating":"5","ratingCount":"5"},
