--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 <meta content="подробный обзор слота The Dog House и промокод DOG2026." name="twitter:description"/>
 <meta content="https://i.yapx.ru/a7BuA.png" name="twitter:image"/>
 <meta content="#0b0b12" name="theme-color"/>
-<link href="/DOG3.png" rel="icon" type="image/png"/>
+<!-- ✅ Favicons (local PNG + ICO) -->
+<link rel="icon" type="image/png" sizes="32x32" href="/DOG3.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="/DOG3.png">
+<meta name="theme-color" content="#0b0b12">
+
+<!-- 🔍 Vercel Analytics -->
+<script defer src="https://vercel.com/analytics/script.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet"/>
 
 <!-- 🔍 Подключение аналитики Vercel -->
@@ -639,4 +647,3 @@
   </script>
 </body>
 </html>
-
