--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet"/>
 
 <!-- 🔍 Подключение аналитики Vercel -->
-<script defer src="https://vercel.com/analytics/script.js"></script>
+<script defer src="https://vitals.vercel-insights.com/v1/script.js"></script>
 <!-- Structured data (WebPage + BreadcrumbList + FAQ + Product + Reviews/Rating) -->
 <script type="application/ld+json">
   {
@@ -647,3 +647,4 @@
   </script>
 </body>
 </html>
+
