--- a/bonus.html
+++ b/bonus.html
@@ -1,15 +1,127 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dog House — страница</title>
-<link rel="icon" href="https://doghouse.cards/DOG3.png" type="image/png">
-<link rel="shortcut icon" href="https://doghouse.cards/DOG3.png" type="image/png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Dog House — Бонусы и фриспины 🎁</title>
+  <meta name="description" content="Все бонусы, фриспины и особенности слота The Dog House от Pragmatic Play. Узнайте, как активировать бонусные раунды и увеличить выигрыш!" />
+  <link rel="icon" href="https://doghouse.cards/DOG3.png" type="image/png" />
+  <link rel="shortcut icon" href="https://doghouse.cards/DOG3.png" type="image/png" />
+  <link rel="canonical" href="https://doghouse.cards/bonus.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="The Dog House — Бонусы и фриспины 🎰" />
+  <meta property="og:description" content="Все о бонусах и фриспинах в слоте The Dog House от Pragmatic Play. Как активировать, как выигрывать, где играть онлайн." />
+  <meta property="og:image" content="https://doghouse.cards/DOG3.png" />
+  <meta property="og:url" content="https://doghouse.cards/bonus.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Dog House Cards" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Game",
+    "name": "The Dog House",
+    "applicationCategory": "SlotGame",
+    "operatingSystem": "Web",
+    "author": {
+      "@type": "Organization",
+      "name": "Pragmatic Play"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Dog House Cards"
+    },
+    "description": "Подробное описание бонусов и фриспинов в слоте The Dog House от Pragmatic Play.",
+    "url": "https://doghouse.cards/bonus.html"
+  }
+  </script>
+
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: #fff;
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    h1 {
+      font-size: 2rem;
+      color: #f4d03f;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 1rem 2rem;
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+    }
+    a.play-btn {
+      display: inline-block;
+      margin: 1.5rem 0;
+      padding: 0.8rem 1.5rem;
+      background: linear-gradient(90deg, #f4d03f, #f39c12);
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    a.play-btn:hover {
+      background: linear-gradient(90deg, #f39c12, #f4d03f);
+      transform: scale(1.05);
+    }
+    footer {
+      text-align: center;
+      margin-top: 2rem;
+      padding: 1rem;
+    }
+    footer a {
+      display: inline-block;
+      margin: 0.5rem;
+      padding: 0.6rem 1.2rem;
+      color: #fff;
+      background: #222;
+      border: 1px solid #444;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    footer a:hover {
+      background: #f4d03f;
+      color: #000;
+    }
+  </style>
 </head>
 <body>
-<h1>Страница Dog House</h1>
-<p>Пример страницы для SEO оптимизации.</p>
-<a href="https://1woxno.life/casino/list?open=register&sub1=Dog">Играть сейчас</a>
+  <header>
+    <h1>Бонусы и фриспины в The Dog House 🎁</h1>
+  </header>
+
+  <main>
+    <p>Слот <strong>The Dog House</strong> от Pragmatic Play давно заслужил статус одного из самых популярных благодаря своим уникальным бонусам и щедрым множителям. Игроки могут активировать фриспины, множители до х3 и насладиться динамичным игровым процессом с высоким RTP.</p>
+
+    <p>Чтобы получить фриспины, нужно собрать три бонусных символа «Dog House». После этого начинается серия бесплатных вращений, где липкие Wild-символы увеличивают шансы на крупный выигрыш. В зависимости от количества символов, вы можете получить от 9 до 27 бесплатных вращений.</p>
+
+    <p>Главная особенность бонусного раунда — это Wild множители. Каждый такой символ может увеличить выигрыш в несколько раз, что делает каждое вращение особенно захватывающим. Опытные игроки советуют начинать с минимальной ставки и увеличивать её после активации бонуса — так можно выжать максимум из сессии.</p>
+
+    <p>Также слот поддерживает режим автоспинов и функцию быстрых вращений, что позволяет ускорить процесс и сосредоточиться на самых интересных моментах. Независимо от вашего опыта, бонусы в The Dog House делают игру по-настоящему увлекательной.</p>
+
+    <a href="https://1woxno.life/casino/list?open=register&sub1=Dog" class="play-btn">🎰 Играть сейчас</a>
+
+    <p>Хотите узнать больше о стратегиях и демо-версии? Ознакомьтесь с нашими разделами ниже.</p>
+  </main>
+
+  <footer>
+    <a href="https://doghouse.cards">🏠 Главная</a>
+    <a href="https://doghouse.cards/strategy.html">🧠 Стратегия</a>
+    <a href="https://doghouse.cards/demo.html">🎮 Демо</a>
+  </footer>
 </body>
 </html>
