--- a/strategy.html
+++ b/strategy.html
@@ -1,15 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dog House — страница</title>
-<link rel="icon" href="https://doghouse.cards/DOG3.png" type="image/png">
-<link rel="shortcut icon" href="https://doghouse.cards/DOG3.png" type="image/png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Dog House — Стратегии и советы 🧠</title>
+  <meta name="description" content="Лучшие стратегии и советы для выигрыша в слоте The Dog House от Pragmatic Play. Узнайте, как увеличить RTP и извлечь максимум из бонусных функций!" />
+  <link rel="icon" href="https://doghouse.cards/DOG3.png" type="image/png" />
+  <link rel="shortcut icon" href="https://doghouse.cards/DOG3.png" type="image/png" />
+  <link rel="canonical" href="https://doghouse.cards/strategy.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="The Dog House — Стратегии и советы 🧠" />
+  <meta property="og:description" content="Узнайте эффективные стратегии и советы для игры в слот The Dog House. Поднимите RTP и увеличьте шансы на выигрыш!" />
+  <meta property="og:image" content="https://doghouse.cards/DOG3.png" />
+  <meta property="og:url" content="https://doghouse.cards/strategy.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Dog House Cards" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Game",
+    "name": "The Dog House",
+    "applicationCategory": "SlotGame",
+    "operatingSystem": "Web",
+    "author": {
+      "@type": "Organization",
+      "name": "Pragmatic Play"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Dog House Cards"
+    },
+    "description": "Руководство по стратегиям и советам для игры в слот The Dog House от Pragmatic Play.",
+    "url": "https://doghouse.cards/strategy.html"
+  }
+  </script>
+
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: #fff;
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    h1 {
+      font-size: 2rem;
+      color: #f4d03f;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 1rem 2rem;
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+    }
+    a.play-btn {
+      display: inline-block;
+      margin: 1.5rem 0;
+      padding: 0.8rem 1.5rem;
+      background: linear-gradient(90deg, #f4d03f, #f39c12);
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    a.play-btn:hover {
+      background: linear-gradient(90deg, #f39c12, #f4d03f);
+      transform: scale(1.05);
+    }
+    footer {
+      text-align: center;
+      margin-top: 2rem;
+      padding: 1rem;
+    }
+    footer a {
+      display: inline-block;
+      margin: 0.5rem;
+      padding: 0.6rem 1.2rem;
+      color: #fff;
+      background: #222;
+      border: 1px solid #444;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    footer a:hover {
+      background: #f4d03f;
+      color: #000;
+    }
+  </style>
 </head>
 <body>
-<h1>Страница Dog House</h1>
-<p>Пример страницы для SEO оптимизации.</p>
-<a href="https://1woxno.life/casino/list?open=register&sub1=Dog">Играть сейчас</a>
+  <header>
+    <h1>Стратегии и советы для The Dog House 🧠</h1>
+  </header>
+
+  <main>
+    <p><strong>The Dog House</strong> — слот с высокой волатильностью, что означает крупные, но нечастые выигрыши. Чтобы извлечь максимум из игрового процесса, важно выбрать правильную стратегию ставок и знать, когда лучше остановиться.</p>
+
+    <p>💡 <strong>Совет 1:</strong> Начинайте с минимальной ставки и постепенно повышайте её после каждого небольшого выигрыша. Это позволяет выровнять баланс и увеличить шанс поймать бонусный раунд с фриспинами.</p>
+
+    <p>💡 <strong>Совет 2:</strong> Не злоупотребляйте автоспином. Лучше вручную анализировать поведение барабанов — иногда после серии «пустых» вращений вероятность выпадения бонуса возрастает.</p>
+
+    <p>💡 <strong>Совет 3:</strong> Следите за RTP — в The Dog House он составляет около 96,5%. Если сессия кажется “холодной”, лучше выйти и вернуться позже — слот работает по генератору случайных чисел, и баланс может резко измениться.</p>
+
+    <p>💡 <strong>Совет 4:</strong> Используйте фриспины максимально эффективно — во время бонусных вращений активируются липкие Wild-символы, которые могут умножить выигрыш в несколько раз.</p>
+
+    <p>💡 <strong>Совет 5:</strong> Управляйте банкроллом. Лучшие игроки заранее задают лимит проигрыша и выигрыша — это помогает играть дольше и не терять концентрацию.</p>
+
+    <a href="https://1woxno.life/casino/list?open=register&sub1=Dog" class="play-btn">🎰 Играть сейчас</a>
+
+    <p>Эти советы помогут вам играть с удовольствием и повышенной эффективностью. Не забывайте, что The Dog House — это прежде всего развлечение, и везение играет ключевую роль.</p>
+  </main>
+
+  <footer>
+    <a href="https://doghouse.cards">🏠 Главная</a>
+    <a href="https://doghouse.cards/bonus.html">🎁 Бонусы</a>
+    <a href="https://doghouse.cards/demo.html">🎮 Демо</a>
+  </footer>
 </body>
 </html>
