--- a/demo.html
+++ b/demo.html
@@ -1,15 +1,134 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dog House — страница</title>
-<link rel="icon" href="https://doghouse.cards/DOG3.png" type="image/png">
-<link rel="shortcut icon" href="https://doghouse.cards/DOG3.png" type="image/png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Dog House — Демо-игра и бесплатный режим 🎮</title>
+  <meta name="description" content="Играй в слот The Dog House бесплатно! Демо-режим от Pragmatic Play без регистрации и риска. Узнай механику, бонусы и RTP игры." />
+  <link rel="icon" href="https://doghouse.cards/DOG3.png" type="image/png" />
+  <link rel="shortcut icon" href="https://doghouse.cards/DOG3.png" type="image/png" />
+  <link rel="canonical" href="https://doghouse.cards/demo.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="The Dog House — Демо-режим 🎮" />
+  <meta property="og:description" content="Играй в The Dog House бесплатно и без регистрации. Ознакомься с бонусами, RTP и фриспинами в демо-версии от Pragmatic Play." />
+  <meta property="og:image" content="https://doghouse.cards/DOG3.png" />
+  <meta property="og:url" content="https://doghouse.cards/demo.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Dog House Cards" />
+
+  <!-- Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VideoGame",
+    "name": "The Dog House Demo",
+    "applicationCategory": "SlotGame",
+    "operatingSystem": "Web",
+    "author": {
+      "@type": "Organization",
+      "name": "Pragmatic Play"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Dog House Cards"
+    },
+    "description": "Бесплатная демо-версия слота The Dog House. Играйте без риска, изучайте механику и активируйте фриспины.",
+    "url": "https://doghouse.cards/demo.html"
+  }
+  </script>
+
+  <style>
+    body {
+      background-color: #0d0d0d;
+      color: #fff;
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    h1 {
+      font-size: 2rem;
+      color: #f4d03f;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 1rem 2rem;
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+    }
+    a.play-btn {
+      display: inline-block;
+      margin: 1.5rem 0;
+      padding: 0.8rem 1.5rem;
+      background: linear-gradient(90deg, #f4d03f, #f39c12);
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    a.play-btn:hover {
+      background: linear-gradient(90deg, #f39c12, #f4d03f);
+      transform: scale(1.05);
+    }
+    footer {
+      text-align: center;
+      margin-top: 2rem;
+      padding: 1rem;
+    }
+    footer a {
+      display: inline-block;
+      margin: 0.5rem;
+      padding: 0.6rem 1.2rem;
+      color: #fff;
+      background: #222;
+      border: 1px solid #444;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    footer a:hover {
+      background: #f4d03f;
+      color: #000;
+    }
+  </style>
 </head>
 <body>
-<h1>Страница Dog House</h1>
-<p>Пример страницы для SEO оптимизации.</p>
-<a href="https://1woxno.life/casino/list?open=register&sub1=Dog">Играть сейчас</a>
+  <header>
+    <h1>Демо-версия The Dog House 🎮</h1>
+  </header>
+
+  <main>
+    <p><strong>Демо-игра The Dog House</strong> — это идеальный способ познакомиться с популярным слотом от Pragmatic Play без риска. Здесь вы можете протестировать механику, изучить символы, понять особенности бонусов и выработать свою стратегию перед игрой на реальные деньги.</p>
+
+    <p>🎲 <strong>Что такое демо-режим?</strong><br>
+    Это версия игры, где ставки делаются на виртуальные кредиты. Вы можете вращать барабаны, получать бонусы и фриспины — всё как в настоящей игре, но без возможности потери денег.</p>
+
+    <p>🎯 <strong>Преимущества демо-версии:</strong></p>
+    <ul>
+      <li>Полное отсутствие риска;</li>
+      <li>Возможность изучить все бонусные функции;</li>
+      <li>Отработка стратегий без затрат;</li>
+      <li>Доступность на любых устройствах — ПК, смартфон, планшет.</li>
+    </ul>
+
+    <p>💡 <strong>Совет:</strong> попробуйте демо-игру, чтобы почувствовать частоту выпадения бонусных символов и понять поведение слота. Это поможет при переходе к реальной игре.</p>
+
+    <a href="https://1woxno.life/casino/list?open=register&sub1=Dog" class="play-btn">🎰 Играть сейчас</a>
+
+    <p>После демо-режима вы будете лучше понимать механику игры и сможете уверенно перейти к игре на реальные деньги с пониманием всех нюансов.</p>
+  </main>
+
+  <footer>
+    <a href="https://doghouse.cards">🏠 Главная</a>
+    <a href="https://doghouse.cards/bonus.html">🎁 Бонусы</a>
+    <a href="https://doghouse.cards/strategy.html">🧠 Стратегия</a>
+  </footer>
 </body>
 </html>
