--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 
 <html lang="ru">
 <head>
+
+<!-- SEO и CTR-оптимизация -->
+<meta content="index, follow" name="yandex"/>
+<meta content="dog house, слот, Pragmatic Play, играть онлайн, бонусы, фриспины, демо, казино" name="keywords"/>
+<meta content="🎰 Играйте в слот The Dog House от Pragmatic Play. Бонусы, фриспины, демо-режим и стратегии для максимальных выигрышей. DogHouse.cards — всё о легендарном слоте!" name="description"/>
+<!-- Open Graph -->
+<meta content="ru_RU" property="og:locale"/>
+<meta content="iGaming, Slots, Casino" property="article:section"/>
+<meta content="The Dog House — официальный сайт 🎰 Бонусы, демо и стратегия" property="og:title"/>
+<meta content="Бонусы и фриспины, демо-режим и советы по стратегии в слоте Dog House. Играйте онлайн прямо сейчас!" property="og:description"/>
+<meta content="https://doghouse.cards/DOG3.png" property="og:image"/>
+<meta content="https://doghouse.cards/" property="og:url"/>
+<meta content="website" property="og:type"/>
+<meta content="Dog House Cards" property="og:site_name"/>
+<!-- Twitter Card -->
+<meta content="summary_large_image" name="twitter:card"/>
+<meta content="The Dog House — слот Pragmatic Play 🎰" name="twitter:title"/>
+<meta content="Играй в The Dog House бесплатно: бонусы, фриспины, стратегия и демо." name="twitter:description"/>
+<meta content="https://doghouse.cards/DOG3.png" name="twitter:image"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
@@ -21,18 +40,16 @@
 <meta content="https://i.yapx.ru/a7BuA.png" name="twitter:image"/>
 <meta content="#0b0b12" name="theme-color"/>
 <!-- ✅ Favicons (local PNG + ICO) -->
-<link rel="icon" type="image/png" sizes="32x32" href="/DOG3.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="/DOG3.png">
-<meta name="theme-color" content="#0b0b12">
-
+<link href="/DOG3.png" rel="icon" sizes="32x32" type="image/png"/>
+<link href="/favicon.png" rel="icon" sizes="32x32" type="image/png"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/DOG3.png" rel="apple-touch-icon"/>
+<meta content="#0b0b12" name="theme-color"/>
 <!-- 🔍 Vercel Analytics -->
-<script defer src="https://vercel.com/analytics/script.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet"/>
-
+<script defer="" src="https://vercel.com/analytics/script.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&amp;family=Inter:wght@300;400;600&amp;display=swap" rel="stylesheet">
 <!-- 🔍 Подключение аналитики Vercel -->
-<script defer src="https://vitals.vercel-insights.com/v1/script.js"></script>
+<script defer="" src="https://vitals.vercel-insights.com/v1/script.js"></script>
 <!-- Structured data (WebPage + BreadcrumbList + FAQ + Product + Reviews/Rating) -->
 <script type="application/ld+json">
   {
@@ -406,7 +423,7 @@
     .reveal{opacity:0;transform:translateY(10px);transition:opacity .6s ease, transform .6s ease}
     .reveal.visible{opacity:1;transform:none}
   </style>
-</head>
+</link></head>
 <body>
 <main class="wrap" id="top">
 <header aria-label="The Dog House header" class="site" role="banner">
@@ -419,7 +436,6 @@
 <p itemprop="description">подробный обзор слота, подробная инструкция и эксклюзивный промокод <strong>DOG2026</strong></p>
 </div>
 </div>
-
 </header>
 <section aria-label="Обзор и CTA" class="hero">
 <!-- LEFT: MAIN CONTENT -->
@@ -553,7 +569,6 @@
 </div>
 </div>
 </div><aside class="cta">
-
 <div class="panel reveal" style="padding:14px; text-align:left;">
 <div style="font-weight:800;color:var(--accent);margin-bottom:8px">Быстрая информация</div>
 <table style="width:100%;font-size:14px;color:#dff0ff">
@@ -566,6 +581,30 @@
 </div>
 </aside>
 </section>
+
+<!-- 🔥 SEO-блок: Популярные страницы Dog House -->
+<section class="seo-section" itemscope="" itemtype="https://schema.org/ItemList" style="text-align:center; margin: 3rem 0;">
+<h2 style="color:#f4d03f; font-size:1.8rem; margin-bottom:1.5rem;">Популярные страницы Dog House 🎰</h2>
+<meta content="Популярные страницы Dog House" itemprop="name"/>
+<div style="display:flex; flex-wrap:wrap; justify-content:center; gap:1rem;">
+<a href="https://doghouse.cards/bonus.html" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem" style="background:rgba(255,255,255,0.05); border:1px solid #333; border-radius:12px; padding:1rem 1.5rem; text-decoration:none; color:#fff; width:260px; transition:0.3s;">
+<meta content="1" itemprop="position"/>
+<span style="font-size:1.3rem;">🎁 Бонусы и фриспины</span>
+<p style="font-size:0.9rem; color:#ccc; margin-top:0.5rem;">Узнай, как активировать бонусы и получить бесплатные вращения в Dog House.</p>
+</a>
+<a href="https://doghouse.cards/strategy.html" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem" style="background:rgba(255,255,255,0.05); border:1px solid #333; border-radius:12px; padding:1rem 1.5rem; text-decoration:none; color:#fff; width:260px; transition:0.3s;">
+<meta content="2" itemprop="position"/>
+<span style="font-size:1.3rem;">🧠 Стратегии выигрыша</span>
+<p style="font-size:0.9rem; color:#ccc; margin-top:0.5rem;">Пошаговые советы и тактики, которые помогают увеличить RTP и частоту выигрышей.</p>
+</a>
+<a href="https://doghouse.cards/demo.html" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem" style="background:rgba(255,255,255,0.05); border:1px solid #333; border-radius:12px; padding:1rem 1.5rem; text-decoration:none; color:#fff; width:260px; transition:0.3s;">
+<meta content="3" itemprop="position"/>
+<span style="font-size:1.3rem;">🎮 Демо-режим</span>
+<p style="font-size:0.9rem; color:#ccc; margin-top:0.5rem;">Попробуй слот бесплатно без регистрации и риска, изучи механику и бонусные функции.</p>
+</a>
+</div>
+</section>
+<!-- 🔥 Конец SEO-блока -->
 <footer role="contentinfo">
 <p>© The Dog House • Информационный обзор. Игра только для лиц старше 18 лет. Азарт сопряжён с риском — играйте ответственно.</p>
 </footer>
@@ -647,4 +686,6 @@
   </script>
 </body>
 </html>
+
+
 
